<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_for_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/turntableRight"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/right_turntable_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/turntable" />

    <ImageView
        android:id="@+id/turntableLeft"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/left_turntable_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/turntable" />

    <TextView
        android:id="@+id/songTitleLeft"
        android:layout_width="275dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/default_title"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turntableLeft" />

    <TextView
        android:id="@+id/songTitleRight"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:text="@string/default_title"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turntableRight" />

    <Button
        android:id="@+id/playButtonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/grey_for_buttons"
        android:onClick="leftPlayPressed"
        android:text="@string/play_button_text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songTitleLeft" />

    <Button
        android:id="@+id/pauseButtonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/grey_for_buttons"
        android:onClick="leftPausePressed"
        android:text="@string/pause_button_text"
        app:layout_constraintStart_toEndOf="@+id/playButtonLeft"
        app:layout_constraintTop_toBottomOf="@+id/songTitleLeft" />

    <Button
        android:id="@+id/stopButtonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/grey_for_buttons"
        android:onClick="leftStopPressed"
        android:text="@string/stop_button_text"
        app:layout_constraintStart_toEndOf="@+id/pauseButtonLeft"
        app:layout_constraintTop_toBottomOf="@+id/songTitleLeft" />

    <Button
        android:id="@+id/playButtonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/grey_for_buttons"
        android:onClick="rightPlayPressed"
        android:text="@string/play_button_text"
        app:layout_constraintEnd_toStartOf="@+id/pauseButtonRight"
        app:layout_constraintTop_toBottomOf="@+id/songTitleRight" />

    <Button
        android:id="@+id/pauseButtonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/grey_for_buttons"
        android:onClick="rightPausePressed"
        android:text="@string/pause_button_text"
        app:layout_constraintEnd_toStartOf="@+id/stopButtonRight"
        app:layout_constraintTop_toBottomOf="@+id/songTitleRight" />

    <Button
        android:id="@+id/stopButtonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/grey_for_buttons"
        android:onClick="rightStopPressed"
        android:text="@string/stop_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songTitleRight" />

    <Button
        android:id="@+id/fileBrowser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/grey_for_buttons"
        android:onClick="openLeftFileBrowser"
        android:text="@string/file_browser_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButtonLeft" />

    <SeekBar
        android:id="@+id/volumeSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:max="100"
        android:progress="50"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/white"
        android:thumbTint="@color/grey_for_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fileBrowser"
        app:layout_constraintTop_toBottomOf="@+id/stopButtonLeft" />

</androidx.constraintlayout.widget.ConstraintLayout>